objects/maps__MarkerLayerRelatedList__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Column1__c</fullName>
        <label>Column 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Column2__c</fullName>
        <label>Column 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Column3__c</fullName>
        <label>Column 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ListLabel__c</fullName>
        <label>List Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__NumToDisplay__c</fullName>
        <label>Num To Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ReferenceField__c</fullName>
        <label>Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RelatedSort__c</fullName>
        <label>Sort Related List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SavedQuery__c</fullName>
        <label>Saved Query</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Maps Related Lists</relationshipLabel>
        <relationshipName>Maps_Related_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Maps Marker Layer Related List</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Marker Layer Related Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>